6. Class & Style Binding
- Vue instance에 있는 data를 `style`과 `class`에 바인딩 시킬 수 있다.
- `:style`: 스타일의 경우에는 스타일 속성을 key로 넣고 value에는 해당 속성에 맞는 값을 넣을 수 있다.
- object 형식으로 한 번에 여러 속성들을 부여할 수도 있다.

- `:class`: 클래스의 경우에는 css에서 만들어놓은 class에 부여할 css 속성들을 html tag에 넣을지에 대한 유무(`true` or `false`)를 결정할 수 있다.
- 해당 클래스명을 key로 설정하고 value에 boolean 값을 넣어서 해당 클래스를 넣을지 말지를 결정할 수 있다.
- class binding도 style binding과 마찬가지로 object 형식으로 한 번에 여러 클래스들을 넣을지 말지 결정할 수 있다.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,45 @@
         </div>
         <div class="product-info">
           <h1>{{ product }}</h1>
-          <span v-show="onSale" style="background-color: red; color: white; padding: 5px; display: block; text-align: center; font-weight: 600;">On Sale!</span>
-          <p v-if="inventory > 10" style="font-weight: 600;">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0"><strong>Almost sold out!</strong></p>
-          <p v-else style="color: red; font-weight: 600;">Out of Stock</p>
+          <span v-show="onSale" 
+                style="background-color: red; 
+                      color:white; 
+                      padding: 5px; 
+                      display: block; 
+                      text-align: center; 
+                      font-weight: 600;">
+                      On Sale!
+          </span>
+          <p v-if="inventory > 10" 
+            style="font-weight: 600;"
+            :class="{ lineThrough: !inStock }">In Stock
+          </p>
+          <p v-else-if="inventory <= 10 && inventory > 0">
+            <strong>Almost sold out!</strong>
+          </p>
+          <p v-else 
+              style="color: red; 
+                     font-weight: 600;">
+                     Out of Stock
+          </p>
           <p>{{ description }}</p>
           <ul style="margin-top: 10px;">
             <li v-for="detail in details" style="margin: 5px 0px;">{{ detail }}</li>
           </ul>
 
-          <div v-for="variant in variants" :key="variant.variantId" style="display:inline-block; padding: 25px; font-weight: 600;">
-            <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+          <div v-for="variant in variants" 
+                :key="variant.variantId" 
+                class="color-box"
+                :style="{ backgroundColor: variant.variantColor }" 
+                @mouseover="updateProduct(variant.variantImage)">
           </div>
           <a :href="link" target="_blank">Go to Website</a>
 
-          <button v-on:click="addToCart">Add to Cart</button>
+          <button v-on:click="addToCart" 
+                  :disabled="!inStock"
+                  :class="{ disabledButton: !inStock }">Add to Cart</button>
           
-          <button @click="removeFromCart">Remove from Cart</button>
+          <button @click="removeFromCart" style="background-color: pink;">Remove from Cart</button>
 
           <div class="cart">
             <p>Cart({{cart}})</p>
